--- a/src/REstate.Repositories.Auth.Susanoo/packages.config
+++ b/src/REstate.Repositories.Auth.Susanoo/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Psibr.Platform" version="3.1.0" targetFramework="net461" />
+  <package id="Psibr.Platform" version="4.0.0-pre8" targetFramework="net461" />
   <package id="Susanoo.ConnectionPooling" version="1.0.1" targetFramework="net461" />
   <package id="Susanoo.Core" version="1.2.4.2" targetFramework="net461" />
 </packages>
