--- a/src/REstate.Web.Core/packages.config
+++ b/src/REstate.Web.Core/packages.config
@@ -10,8 +10,8 @@
   <package id="Nancy.Owin" version="2.0-Pre1750" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="OwinJwtAndCookie" version="1.0.8.0" targetFramework="net45" />
-  <package id="Psibr.Platform" version="3.1.0" targetFramework="net461" />
-  <package id="Psibr.Platform.Nancy" version="5.0.4-alpha" targetFramework="net461" />
+  <package id="Psibr.Platform" version="4.0.0-pre8" targetFramework="net461" />
+  <package id="Psibr.Platform.Nancy" version="4.0.0-pre8" targetFramework="net461" />
   <package id="REstate.Domain.Core" version="7.1.1" targetFramework="net461" />
   <package id="REstate.Platform" version="1.1.0" targetFramework="net461" />
   <package id="Serilog" version="2.0.0-rc-602" targetFramework="net461" />
