--- a/src/Psibr.Platform.Configuration.ConsulJson/packages.config
+++ b/src/Psibr.Platform.Configuration.ConsulJson/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Consul" version="0.6.4.6" targetFramework="net461" />
+  <package id="Psibr.Platform" version="4.0.0-pre8" targetFramework="net461" />
 </packages>
