--- a/src/REstate.Connectors.Chrono/REstate.Connectors.Chrono.csproj
+++ b/src/REstate.Connectors.Chrono/REstate.Connectors.Chrono.csproj
@@ -44,8 +44,8 @@
       <HintPath>..\packages\Newtonsoft.Json.9.0.1-beta1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Psibr.Platform, Version=3.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Psibr.Platform.3.1.0\lib\net45\Psibr.Platform.dll</HintPath>
+    <Reference Include="Psibr.Platform, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Psibr.Platform.4.0.0-pre8\lib\net45\Psibr.Platform.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="REstate.Client, Version=5.0.1.0, Culture=neutral, processorArchitecture=MSIL">
