--- a/src/REstate.Connectors.Decorators.Task/packages.config
+++ b/src/REstate.Connectors.Decorators.Task/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net461" />
-  <package id="Psibr.Platform" version="3.1.0" targetFramework="net461" />
+  <package id="Psibr.Platform" version="4.0.0-pre8" targetFramework="net461" />
   <package id="REstate.Domain.Core" version="7.1.1" targetFramework="net461" />
   <package id="REstate.Platform" version="1.1.0" targetFramework="net461" />
 </packages>
