--- a/src/REstate.Services.Chrono/packages.config
+++ b/src/REstate.Services.Chrono/packages.config
@@ -13,16 +13,19 @@
   <package id="Newtonsoft.Json" version="9.0.1-beta1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="OwinJwtAndCookie" version="1.0.8.0" targetFramework="net45" />
-  <package id="Psibr.Platform" version="3.1.0" targetFramework="net461" />
-  <package id="Psibr.Platform.Logging.Serilog" version="1.0.1.0" targetFramework="net45" />
-  <package id="Psibr.Platform.Nancy" version="5.0.4-alpha" targetFramework="net461" />
-  <package id="Psibr.Platform.Nancy.Service" version="5.0.1-alpha" targetFramework="net461" />
-  <package id="Psibr.Platform.Serialization.NewtonsoftJson" version="1.0.0.0" targetFramework="net461" />
+  <package id="Psibr.Platform" version="4.0.0-pre8" targetFramework="net461" />
+  <package id="Psibr.Platform.Logging.Serilog" version="4.0.0-pre8" targetFramework="net461" />
+  <package id="Psibr.Platform.Nancy" version="4.0.0-pre8" targetFramework="net461" />
+  <package id="Psibr.Platform.Nancy.Jwt" version="4.0.0-pre8" targetFramework="net461" />
+  <package id="Psibr.Platform.Serialization.NewtonsoftJson" version="4.0.0-pre8" targetFramework="net461" />
+  <package id="Psibr.Platform.Service" version="4.0.0-pre8" targetFramework="net461" />
+  <package id="Psibr.Platform.Service.Nancy" version="4.0.0-pre8" targetFramework="net461" />
+  <package id="Psibr.Platform.Service.Nancy.Jwt" version="4.0.0-pre8" targetFramework="net461" />
   <package id="REstate.Domain.Chrono" version="1.0.1.0" targetFramework="net461" />
   <package id="REstate.Domain.Core" version="7.1.1" targetFramework="net461" />
   <package id="REstate.Platform" version="1.1.0" targetFramework="net461" />
   <package id="Serilog" version="2.0.0-rc-602" targetFramework="net461" />
-  <package id="Serilog.Sinks.File" version="2.0.0-rc-704" targetFramework="net461" />
+  <package id="Serilog.Sinks.File" version="2.0.0-rc-706" targetFramework="net461" />
   <package id="Serilog.Sinks.Literate" version="2.0.0-rc-25" targetFramework="net461" />
   <package id="Serilog.Sinks.PeriodicBatching" version="2.0.0-rc-707" targetFramework="net461" />
   <package id="Serilog.Sinks.RollingFile" version="2.0.0-rc-703" targetFramework="net461" />
