--- a/src/REstate.Stateless/packages.config
+++ b/src/REstate.Stateless/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Psibr.Platform" version="3.1.0" targetFramework="net461" />
+  <package id="Psibr.Platform" version="4.0.0-pre8" targetFramework="net461" />
   <package id="Psibr.Stateless" version="1.0.8" targetFramework="net461" />
   <package id="REstate.Domain.Core" version="7.1.1" targetFramework="net461" />
 </packages>
