--- a/src/REstate.Connectors.Chrono/packages.config
+++ b/src/REstate.Connectors.Chrono/packages.config
@@ -4,8 +4,8 @@
   <package id="Newtonsoft.Json" version="9.0.1-beta1" targetFramework="net461" />
   <package id="Psibr.Platform" version="4.0.0-pre8" targetFramework="net461" />
   <package id="REstate.Domain.Chrono" version="1.0.1.0" targetFramework="net461" />
-  <package id="REstate.Domain.Core" version="7.1.1" targetFramework="net461" />
-  <package id="REstate.Platform" version="1.1.0" targetFramework="net461" />
+  <package id="REstate.Domain.Core" version="8.0.0" targetFramework="net461" />
+  <package id="REstate.Platform" version="2.0.0-pre2" targetFramework="net461" />
   <package id="REstateClient" version="5.0.1" targetFramework="net461" />
   <package id="REstateClient.Chrono" version="1.1.0" targetFramework="net461" />
 </packages>
