--- a/src/REstate.Services.ChronoConsumer/packages.config
+++ b/src/REstate.Services.ChronoConsumer/packages.config
@@ -7,8 +7,8 @@
   <package id="Psibr.Platform.Logging.Serilog" version="4.0.0-pre8" targetFramework="net461" />
   <package id="Psibr.Platform.Serialization.NewtonsoftJson" version="4.0.0-pre8" targetFramework="net461" />
   <package id="REstate.Domain.Chrono" version="1.0.1.0" targetFramework="net461" />
-  <package id="REstate.Domain.Core" version="7.1.1" targetFramework="net461" />
-  <package id="REstate.Platform" version="1.1.0" targetFramework="net461" />
+  <package id="REstate.Domain.Core" version="8.0.0" targetFramework="net461" />
+  <package id="REstate.Platform" version="2.0.0-pre2" targetFramework="net461" />
   <package id="REstateClient" version="5.0.1" targetFramework="net461" />
   <package id="Serilog" version="2.0.0-rc-602" targetFramework="net461" />
   <package id="Serilog.Sinks.File" version="2.0.0-rc-706" targetFramework="net461" />
