--- a/src/REstate.Services.Core/packages.config
+++ b/src/REstate.Services.Core/packages.config
@@ -22,8 +22,8 @@
   <package id="Psibr.Platform.Service" version="4.0.0-pre8" targetFramework="net461" />
   <package id="Psibr.Platform.Service.Nancy" version="4.0.0-pre8" targetFramework="net461" />
   <package id="Psibr.Platform.Service.Nancy.Jwt" version="4.0.0-pre8" targetFramework="net461" />
-  <package id="REstate.Domain.Core" version="7.1.1" targetFramework="net461" />
-  <package id="REstate.Platform" version="1.1.0" targetFramework="net461" />
+  <package id="REstate.Domain.Core" version="8.0.0" targetFramework="net461" />
+  <package id="REstate.Platform" version="2.0.0-pre2" targetFramework="net461" />
   <package id="Serilog" version="2.0.0-rc-602" targetFramework="net461" />
   <package id="Serilog.Sinks.File" version="2.0.0-rc-706" targetFramework="net461" />
   <package id="Serilog.Sinks.Literate" version="2.0.0-rc-25" targetFramework="net461" />
