--- a/src/REstate.Web.AdminUI/packages.config
+++ b/src/REstate.Web.AdminUI/packages.config
@@ -6,6 +6,6 @@
   <package id="Nancy.Owin" version="2.0-Pre1750" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Psibr.Platform" version="4.0.0-pre8" targetFramework="net461" />
-  <package id="REstate.Domain.Core" version="7.1.1" targetFramework="net461" />
-  <package id="REstate.Platform" version="1.1.0" targetFramework="net461" />
+  <package id="REstate.Domain.Core" version="8.0.0" targetFramework="net461" />
+  <package id="REstate.Platform" version="2.0.0-pre2" targetFramework="net461" />
 </packages>
