--- a/src/REstate.Web.Auth/REstate.Web.Auth.csproj
+++ b/src/REstate.Web.Auth/REstate.Web.Auth.csproj
@@ -78,12 +78,12 @@
       <HintPath>..\packages\Psibr.Platform.Nancy.4.0.0-pre8\lib\net45\Psibr.Platform.Nancy.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="REstate.Domain.Core, Version=7.1.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\REstate.Domain.Core.7.1.1\lib\net45\REstate.Domain.Core.dll</HintPath>
+    <Reference Include="REstate.Domain.Core, Version=8.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\REstate.Domain.Core.8.0.0\lib\net45\REstate.Domain.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="REstate.Platform, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\REstate.Platform.1.1.0\lib\net461\REstate.Platform.dll</HintPath>
+    <Reference Include="REstate.Platform, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\REstate.Platform.2.0.0-pre2\lib\net461\REstate.Platform.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -101,6 +101,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Requests\ApiKeyAuthenticationRequest.cs" />
     <Compile Include="Requests\CredentialAuthenticationRequest.cs" />
+    <Compile Include="Responses\JwtResponse.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
