--- a/src/REstate.Web.Core/REstate.Web.Core.csproj
+++ b/src/REstate.Web.Core/REstate.Web.Core.csproj
@@ -78,12 +78,12 @@
       <HintPath>..\packages\Psibr.Platform.Nancy.4.0.0-pre8\lib\net45\Psibr.Platform.Nancy.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="REstate.Domain.Core, Version=7.1.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\REstate.Domain.Core.7.1.1\lib\net45\REstate.Domain.Core.dll</HintPath>
+    <Reference Include="REstate.Domain.Core, Version=8.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\REstate.Domain.Core.8.0.0\lib\net45\REstate.Domain.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="REstate.Platform, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\REstate.Platform.1.1.0\lib\net461\REstate.Platform.dll</HintPath>
+    <Reference Include="REstate.Platform, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\REstate.Platform.2.0.0-pre2\lib\net461\REstate.Platform.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Serilog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
@@ -109,6 +109,10 @@
     <Compile Include="Modules\InstancesModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Requests\TriggerFireRequest.cs" />
+    <Compile Include="Responses\IsInStateResponse.cs" />
+    <Compile Include="Responses\MachineInstanceResponse.cs" />
+    <Compile Include="Responses\ReasonPhraseResponse.cs" />
+    <Compile Include="Responses\TriggerResponse.cs" />
     <Compile Include="Schemas.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
