--- a/src/REstate.Web.Core/packages.config
+++ b/src/REstate.Web.Core/packages.config
@@ -12,8 +12,8 @@
   <package id="OwinJwtAndCookie" version="1.0.8.0" targetFramework="net45" />
   <package id="Psibr.Platform" version="4.0.0-pre8" targetFramework="net461" />
   <package id="Psibr.Platform.Nancy" version="4.0.0-pre8" targetFramework="net461" />
-  <package id="REstate.Domain.Core" version="7.1.1" targetFramework="net461" />
-  <package id="REstate.Platform" version="1.1.0" targetFramework="net461" />
+  <package id="REstate.Domain.Core" version="8.0.0" targetFramework="net461" />
+  <package id="REstate.Platform" version="2.0.0-pre2" targetFramework="net461" />
   <package id="Serilog" version="2.0.0-rc-602" targetFramework="net461" />
   <package id="Topshelf" version="4.0.1" targetFramework="net461" />
 </packages>
