Fixing connectors and chronoconsumers. Changing back to update from eventlog on state

--- a/src/REstate.Web/appconfig.json
+++ b/src/REstate.Web/appconfig.json
@@ -1,7 +1,7 @@
 ﻿{
   "REstateConfiguration": {
     "ConnectionStrings": {
-      "EngineConnectionString": "server=(localdb)\\MSSQLLocalDB;database=REstate;Application Name=REstate;integrated security=sspi;MultipleActiveResultSets=true"
+      "EngineConnectionString": "server=(localdb)\\MSSQLLocalDB;database=REstate;Application Name=REstate;integrated security=sspi;"
     },
     "AuthenticationSettings": {
       "ClaimsPrincipalResourceName": "REstate.User",
