--- a/src/REstate.Engine.Repositories.MSSQL/project.json
+++ b/src/REstate.Engine.Repositories.MSSQL/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "authors": [
     "Donovan (Ovan) Crone",
     "Andrea Balfour"
@@ -12,7 +12,8 @@
     "System.Linq": "4.1.0",
     "System.Runtime": "4.1.0",
     "System.Runtime.InteropServices": "4.1.0",
-    "System.Threading.Tasks": "4.0.11"
+    "System.Threading.Tasks": "4.0.11",
+    "System.Threading.Timer": "4.0.1"
   },
   "description": "MSSQL repository for engine-level components of REstate a StateMachine-As-A-Service concept.",
   "frameworks": {
