Ignoring project.lock.json

--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,5 @@ src/REstate.Service.AdminUI/wwwroot/app/*.js.map
 /src/REstate.Service.AdminUI/wwwroot/.vscode/.browse.VC.db
 /.vscode/.browse.VC.db
 /plugins/**/
+
+project.lock.json
