--- a/src/REstate.Auth/project.json
+++ b/src/REstate.Auth/project.json
@@ -15,6 +15,9 @@
       "imports": "dnxcore50"
     }
   },
+    "buildOptions": {
+    "debugType": "portable"
+  },
   "packOptions": {
     "requireLicenseAcceptance": false,
     "licenseUrl": "https://opensource.org/licenses/MIT",
