--- a/src/REstate.Connectors.Scheduler.Http/project.json
+++ b/src/REstate.Connectors.Scheduler.Http/project.json
@@ -22,6 +22,9 @@
       "imports": "dnxcore50"
     }
   },
+    "buildOptions": {
+    "debugType": "portable"
+  },
   "packOptions": {
     "requireLicenseAcceptance": false,
     "licenseUrl": "https://opensource.org/licenses/MIT",
