--- a/src/REstate.Engine.Repositories.MSSQL/project.json
+++ b/src/REstate.Engine.Repositories.MSSQL/project.json
@@ -21,6 +21,9 @@
       "imports": "dnxcore50"
     }
   },
+    "buildOptions": {
+    "debugType": "portable"
+  },
   "packOptions": {
     "requireLicenseAcceptance": false,
     "licenseUrl": "https://opensource.org/licenses/MIT",
