--- a/src/REstate.Engine.Stateless/project.json
+++ b/src/REstate.Engine.Stateless/project.json
@@ -16,7 +16,9 @@
     ],
     "summary": "Core contracts and relationships for the engine of REstate."
   },
-
+  "buildOptions": {
+    "debugType": "portable"
+  },
   "dependencies": {
     "System.Collections": "4.0.11",
     "System.Linq": "4.1.0",
