--- a/src/REstate.Scheduler.Consumer.Direct/project.json
+++ b/src/REstate.Scheduler.Consumer.Direct/project.json
@@ -18,6 +18,9 @@
       "imports": "dnxcore50"
     }
   },
+  "buildOptions": {
+    "debugType": "portable"
+  },
   "packOptions": {
     "requireLicenseAcceptance": false,
     "licenseUrl": "https://opensource.org/licenses/MIT",
