--- a/src/REstate.Web/appconfig.json
+++ b/src/REstate.Web/appconfig.json
@@ -4,6 +4,7 @@
       "EngineConnectionString": "server=(localdb)\\MSSQLLocalDB;database=REstate;Application Name=REstate;integrated security=sspi;"
     },
     "AuthenticationSettings": {
+      "UseAuthentication": false,
       "ClaimsPrincipalResourceName": "REstate.User",
       "SchedulerApiKey": "F1752DAA-1A32-41D7-9106-1FF2890B377A"
     }
