--- a/src/REstate.Connectors.RabbitMQ/project.json
+++ b/src/REstate.Connectors.RabbitMQ/project.json
@@ -10,9 +10,9 @@
     "System.Threading.Tasks": "4.0.11",
     "REstate.Common": "0.1.0-*",
     "REstate.Engine": "0.1.0-*",
-    "REstate.Scheduler": "0.1.0-*"
+    "RabbitMQ.Client":"4.1.1"
   },
-  "description": "Scheduling connector for REstate a StateMachine-As-A-Service concept.",
+  "description": "RabbitMQ messaging connector for REstate a StateMachine-As-A-Service concept.",
   "frameworks": {
     "netstandard1.6": {
       "imports": "dnxcore50"
@@ -30,7 +30,7 @@
       "Donovan (Ovan) Crone",
       "Andrea Balfour"
     ],
-    "summary": "Scheduling connector for REstate."
+    "summary": "RabbitMQ connector for REstate."
   },
   "version": "0.1.0-*"
 }
