--- a/src/REstate.Web/project.json
+++ b/src/REstate.Web/project.json
@@ -26,7 +26,8 @@
     "copyToOutput": {
       "includeFiles": [
         "appconfig.json",
-        "REstate.pfx"
+        "REstate.pfx",
+        "web.config"
       ],
       "include": "Views/**"
     }
