Ok this is tiresome guys...

--- a/src/REstate.Web/project.json
+++ b/src/REstate.Web/project.json
@@ -35,7 +35,8 @@
   "publishOptions": {
     "includeFiles": [
       "appconfig.json",
-      "REstate.pfx"
+      "REstate.pfx",
+      "web.config"
     ]
   },
   "frameworks": {
