--- a/src/REstate.Web/appconfig.json
+++ b/src/REstate.Web/appconfig.json
@@ -1,7 +1,7 @@
 ﻿{
-  "REstateConfiguration": {
+  "REstate": {
     "ConnectionStrings": {
-      "EngineConnectionString": "Server=tcp:psibr.database.windows.net,1433;Initial Catalog=REstate;Persist Security Info=False;User ID=REstateUser;Password=REstate_is_alive_2;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+      "Engine": "Server=tcp:psibr.database.windows.net,1433;Initial Catalog=REstate;Persist Security Info=False;User ID=REstateUser;Password=REstate_is_alive_2;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     },
     "AuthenticationSettings": {
       "UseAuthentication": false,
@@ -10,5 +10,8 @@
       "SchedulerApiKey": "F1752DAA-1A32-41D7-9106-1FF2890B377A",
       "TokenLifeSpanMinutes": 43200
     }
+  },
+  "RabbitMQ": {
+    "Uri": "amqp://restate:restate_is_alive_2@40.118.135.89:5672/"
   }
 }
