--- a/src/REstate.Common/project.json
+++ b/src/REstate.Common/project.json
@@ -23,7 +23,8 @@
     "System.Collections": "4.0.11",
     "System.Linq": "4.1.0",
     "System.Threading.Tasks": "4.0.11",
-    "System.Runtime": "4.1.0"
+    "System.Runtime": "4.1.0",
+    "System.ComponentModel.Annotations": "4.1.0"
   },
 
   "frameworks": {
